--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-responsive-carousel": "^3.2.23",
-    "supports-color": "^8.1.1"
+    "supports-color": "^8.1.1",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/node": "latest",
